--- a/loop.html
+++ b/loop.html
@@ -8,7 +8,8 @@
 <body>
     <script lang="javascript" type="text/javascript">
         var i;
-        for(i=1;i<=10;i++)
+        var num = parseInt(prompt("Enter the number"))
+        for(i=1;i<=num;i++)
         {
             document.write(i+"<br>");
         }
